--- a/TODO.txt
+++ b/TODO.txt
@@ -1,10 +1,6 @@
 TODO
 ====
 
-- convert parameters from shell to correct type (Integer/what ever we want to support)
-
-- allow receiving Integer, String, Boolean
-
 - handle receiving parameters in REST
 
 - allow receiving List of the types above, both CLI and REST
@@ -15,3 +11,6 @@ TODO
 
 - CLI ongoing commands that print output even after completion
 
+- handle partial completion of  commands: a<tab> with options aaa1, aaa2 --> aaa
+
+- support services injection & dependencies handling
